update schedule